tests/baselines/reference/derivedClassTransitivity2.errors.txt
==== tests/cases/compiler/derivedClassTransitivity2.ts (1 errors) ====
    // subclassing is not transitive when you can remove required parameters and add optional parameters
    
    class C {
        foo(x: number, y: number) { }
    }
    
    class D extends C {
        foo(x: number) { } // ok to drop parameters
    }
    
    class E extends D {
        foo(x: number, y?: string) { } // ok to add optional parameters
    }
    
    var c: C;
    var d: D;
    var e: E;
    c = e;
    ~
!!! derivedClassTransitivity2.ts(18,1): error TS2012: Cannot convert 'E' to 'C':
!!! 	Types of property 'foo' of types 'E' and 'C' are incompatible:
!!! 		Call signatures of types '(x: number, y?: string) => void' and '(x: number, y: number) => void' are incompatible.
    var r = c.foo(1, 1);
    var r2 = e.foo(1, '');